# ChessMultiplayer

./: .gitmodules  CMakeLists.txt
chess_common/: CMakeLists.txt
chess_common/include/net/: Connection.h  ConnectionClient.h  Message.h  MessageTypes.h  NetException.h  ThreadSafeQueue.h
client/: CMakeLists.txt
client/include/app/: Launcher.h
client/include/chess_gui/: MainMenu.h
client/src/app/: Launcher.cpp
client/src/chess_gui/: MainMenu.cpp
server/: CMakeLists.txt
server/app/: main.cpp
server/include/net/: CommunicationCentre.h  ConnectionServer.h
server/src/net/: CommunicationCentre.cpp
